--- a/app/src/main/res/layout/fragment_cart_check_out.xml
+++ b/app/src/main/res/layout/fragment_cart_check_out.xml
@@ -15,7 +15,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name"
+            android:hint="@string/name"
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
@@ -120,7 +120,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:text="Subtotal"
+                android:text="@string/subtotal"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -143,7 +143,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="1"
                 android:layout_column="0"
-                android:text="Shipping Fees"
+                android:text="@string/shipping_fees"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -170,7 +170,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="2"
                 android:layout_column="0"
-                android:text="Total"
+                android:text="@string/total_rs"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -202,7 +202,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Payment Options"/>
+            android:text="@string/payment_options"
+            android:layout_marginStart="16dp"
+            />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -224,17 +226,28 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/fragmentCartCheckOutPlaceOrderButton"
+        <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Place Order"
-            android:textAllCaps="false"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:indeterminateTint="@color/colorPrimary"
+            android:id="@+id/fragmentCartCheckOutProgressBar"
+            android:visibility="gone"
             />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/fragmentCartCheckOutConfirmButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="@string/confirm"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="16dp"
+            />
     </LinearLayout>
 
 
