--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,26 +18,27 @@
         />
 
     <RelativeLayout
+        android:id="@+id/fragmentProfileDetailsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fragmentProfileDetailsLayout"
         android:paddingBottom="76dp"
-        android:visibility="gone"
+
         >
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/imageCardView"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:cardCornerRadius="60dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="60dp">
+
             <ImageView
                 android:id="@+id/imageViewProfile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_baseline_profile_24"
-                />
+                android:src="@drawable/ic_baseline_profile_24" />
         </com.google.android.material.card.MaterialCardView>
 
 
@@ -64,8 +65,7 @@
             android:background="@drawable/wide_button"
             android:text="@string/see_full_profile"
             android:textAllCaps="false"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textBuyersSection"
@@ -83,17 +83,37 @@
             android:layout_below="@id/textBuyersSection"
             android:layout_marginStart="24sp"
             android:layout_marginTop="8dp"
-            android:text="Buyer Dashboard"
             android:background="@drawable/wide_button"
-            android:textColor="@color/white"
+            android:text="@string/buyer_dashboard"
             android:textAllCaps="false"
-            />
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/textCommunitySection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonBuyersSection"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/community_section" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonCommunitySection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textCommunitySection"
+            android:layout_marginStart="24sp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/wide_button"
+            android:text="@string/community_contributions"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/textSellersSection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/buttonBuyersSection"
+            android:layout_below="@id/buttonCommunitySection"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:text="@string/seller_section" />
@@ -106,12 +126,11 @@
             android:layout_below="@id/textSellersSection"
             android:layout_marginStart="24sp"
             android:layout_marginTop="8dp"
-            android:text="@string/setup_store"
             android:background="@drawable/wide_button"
+            android:text="@string/setup_store"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonGoToStore"
@@ -120,12 +139,11 @@
             android:layout_below="@id/buttonSetupStore"
             android:layout_marginStart="24sp"
             android:layout_marginTop="8dp"
-            android:text="@string/go_to_store"
             android:background="@drawable/wide_button"
+            android:text="@string/go_to_store"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:visibility="gone"
-            />
+            android:visibility="gone" />
 
 
     </RelativeLayout>
