--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,8 +21,7 @@
         android:id="@+id/fragmentProfileDetailsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="76dp"
-
+        android:visibility="gone"
         >
 
         <com.google.android.material.card.MaterialCardView
