--- a/app/src/main/res/layout/layout_community_post_item.xml
+++ b/app/src/main/res/layout/layout_community_post_item.xml
@@ -67,7 +67,7 @@
             android:layout_marginTop="8dp"
             android:layout_alignParentStart="true"
             android:layout_toStartOf="@id/layoutCommunitySectionPostImage"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/layoutCommunityPostItemDescription"
             />
 
     </RelativeLayout>
