--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -85,6 +85,7 @@
         android:id="@+id/FragmentChangePasswordProgressBar"
         android:layout_marginTop="36dp"
         android:visibility="gone"
+        android:indeterminateTint="@color/colorPrimary"
         />
 
 </LinearLayout>
