--- a/app/src/main/res/layout/fragment_edit_personal_info.xml
+++ b/app/src/main/res/layout/fragment_edit_personal_info.xml
@@ -208,7 +208,8 @@
             android:layout_height="wrap_content"
             android:text="@string/update"
             android:textColor="@color/white"
-            android:background="@drawable/button_bg"
+            android:background="@drawable/wide_button"
+            android:textAllCaps="false"
             android:layout_marginTop="18dp"
             android:layout_gravity="center"
             android:layout_marginBottom="32dp"
