--- a/app/src/main/res/layout/fragment_filters.xml
+++ b/app/src/main/res/layout/fragment_filters.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.search.presentation.FiltersFragment"
     >
+
+    <TextView
+        android:id="@+id/fragmentFilterFragmentClearFilterTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/clear_filters"
+        app:drawableTopCompat="@drawable/ic_baseline_clear_24"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="8dp"
+
+
+        app:drawableTint="@color/colorPrimary" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -54,8 +69,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/fragmentFiltersTextInputCities"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        />
+        android:indeterminateTint="@color/colorPrimary"
+        android:layout_marginTop="32dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fragmentFiltersApplyButton"
@@ -63,10 +78,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
+        android:background="@drawable/button_bg"
         android:text="@string/apply"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/white"
-        />
+        android:textColor="@color/white" />
 
 
 
