--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -44,7 +44,7 @@
         android:layout_below="@id/textInputLayoutE"
         android:layout_centerInParent="true"
         android:layout_marginTop="24dp"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/wide_button"
         android:text="@string/submit"
         android:textColor="@color/white" />
 
@@ -56,6 +56,7 @@
         android:layout_below="@id/fragmentForgotPasswordSubmitButton"
         android:layout_marginTop="50dp"
         android:visibility="gone"
+        android:indeterminateTint="@color/colorPrimary"
         />
 
 
