--- a/app/src/main/res/layout/fragment_full_user_profile.xml
+++ b/app/src/main/res/layout/fragment_full_user_profile.xml
@@ -26,7 +26,9 @@
         <RelativeLayout
             android:id="@+id/layoutFullUserProfileDetails"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            >
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/imageCardView"
