--- a/app/src/main/res/layout/layout_home_child_item.xml
+++ b/app/src/main/res/layout/layout_home_child_item.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
-    android:layout_height="140dp">
+    android:layout_width="140dp"
+    android:layout_height="150dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="8sp"
+    app:cardElevation="6dp"
+    app:cardUseCompatPadding="true"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -9,8 +14,9 @@
         >
        <ImageView
            android:id="@+id/layoutHomeChildProductThumbnailImageView"
-           android:layout_width="100dp"
-           android:layout_height="100dp"
+           android:layout_width="80dp"
+           android:layout_height="80dp"
+           android:layout_marginTop="8dp"
            android:src="@drawable/image_place_holder"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
@@ -22,6 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/layoutHomeChildProductThumbnailImageView"
             android:layout_centerInParent="true"
-            android:text="Product name" />
+            android:layout_marginTop="4dp"
+            android:text="Product name"
+            />
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
