--- a/app/src/main/res/layout/layout_home_latest_products_item.xml
+++ b/app/src/main/res/layout/layout_home_latest_products_item.xml
@@ -7,30 +7,35 @@
         android:id="@+id/layoutHomeLatestProductsItemCategoryNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fruit"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="24dp"
-        />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
+        android:text="Fruit"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/layoutHomeLatestProductsItemSeeAllTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="See All"
-        android:background="@color/colorTransparent"
-        android:textColor="@color/black"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="24dp"
-        android:textSize="20sp"/>
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/colorTransparent"
+        android:text="@string/see_all"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="italic" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/layoutHomeLatestProductsChildRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layoutHomeLatestProductsItemCategoryNameTextView"
-        />
+        android:layout_below="@id/layoutHomeLatestProductsItemCategoryNameTextView" />
 
 </RelativeLayout>
