--- a/app/src/main/res/layout/layout_more_item.xml
+++ b/app/src/main/res/layout/layout_more_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:elevation="18dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,24 +14,25 @@
 
         <ImageView
             android:id="@+id/layoutMoreItemsImageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="8dp"
+            android:scaleType="centerCrop"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
-            android:src="@drawable/image_place_holder"
-             />
+            android:src="@drawable/image_place_holder" />
+
         <TextView
             android:id="@+id/layoutMoreItemsProductNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product Name"
-            android:layout_toEndOf="@id/layoutMoreItemsImageView"
-            android:layout_marginTop="48dp"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:layout_marginStart="8dp"
-            />
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/layoutMoreItemsImageView"
+            android:text="Product Name"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/layoutMoreItemsProductCategoryTextView"
@@ -38,52 +42,44 @@
             android:layout_toEndOf="@id/layoutMoreItemsImageView"
             android:layout_below="@id/layoutMoreItemsProductNameTextView"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             />
 
+
         <TextView
-            android:id="@+id/layoutMoreItemsProductQuantityTextView"
+            android:id="@+id/textRS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
+            android:layout_below="@id/layoutMoreItemsProductCategoryTextView"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@id/layoutMoreItemsImageView"
-            android:layout_below="@id/layoutMoreItemsProductCategoryTextView"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:layout_marginStart="8dp"
-            />
-        <TextView
-            android:id="@+id/layoutMoreItemsProductQuantityUnitTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kil0"
-            android:layout_toEndOf="@id/layoutMoreItemsProductQuantityTextView"
-            android:layout_below="@id/layoutMoreItemsProductCategoryTextView"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:layout_marginStart="8dp"
-            />
+            android:text="@string/rs"
+            android:textColor="@color/colorRed"
+            android:textSize="16sp" />
+
 
         <TextView
             android:id="@+id/layoutMoreItemsProductPriceTextView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@id/layoutMoreItemsProductQuantityUnitTextView"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layoutMoreItemsProductCategoryTextView"
             android:layout_marginStart="8dp"
-            android:layout_toEndOf="@id/layoutMoreItemsImageView"
+            android:layout_toEndOf="@id/textRS"
             android:text="120"
             android:textColor="@color/colorRed"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/layoutMoreItemsProductLocationTextView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@id/layoutMoreItemsProductQuantityUnitTextView"
-            android:layout_alignParentEnd="true"
-            android:text="Location"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layoutMoreItemsProductPriceTextView"
+            android:layout_toEndOf="@id/layoutMoreItemsImageView"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:textSize="20sp" />
+            android:text="@string/location"
+            android:textSize="16sp" />
 
 
 
