--- a/app/src/main/res/layout/layout_search_item_view.xml
+++ b/app/src/main/res/layout/layout_search_item_view.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="8dp"
+    android:layout_margin="8dp"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -10,19 +15,19 @@
 
         <ImageView
             android:id="@+id/layoutSearchItemsImageView"
-            android:layout_width="120dp"
-            android:layout_height="130dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
-            android:src="@drawable/image_place_holder"
-            android:scaleType="fitXY" />
+            android:layout_margin="16dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/image_place_holder" />
 
         <TextView
             android:id="@+id/layoutSearchItemsProductNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:layout_toEndOf="@id/layoutSearchItemsImageView"
             android:text="Product Name"
             android:textColor="@color/black"
@@ -41,36 +46,25 @@
             android:layout_marginStart="8dp"
             />
 
+
         <TextView
-            android:id="@+id/layoutSearchItemsProductQuantityTextView"
+            android:id="@+id/txtRs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
+            android:layout_below="@id/layoutSearchItemsProductCategoryTextView"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@id/layoutSearchItemsImageView"
-            android:layout_below="@id/layoutSearchItemsProductCategoryTextView"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginStart="8dp"
-            />
-        <TextView
-            android:id="@+id/layoutSearchItemsProductQuantityUnitTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kil0"
-            android:layout_toEndOf="@id/layoutSearchItemsProductQuantityTextView"
-            android:layout_below="@id/layoutSearchItemsProductCategoryTextView"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginStart="8dp"
-            />
+            android:text="@string/rs"
+            android:textColor="@color/colorRed"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/layoutSearchItemsProductPriceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/layoutSearchItemsProductQuantityUnitTextView"
+            android:layout_below="@id/layoutSearchItemsProductCategoryTextView"
             android:layout_marginStart="8dp"
-            android:layout_toEndOf="@id/layoutSearchItemsImageView"
+            android:layout_toEndOf="@id/txtRs"
             android:text="120"
             android:textColor="@color/colorRed"
             android:textSize="18sp" />
@@ -83,6 +77,7 @@
             android:layout_marginEnd="16dp"
             android:layout_toEndOf="@id/layoutSearchItemsImageView"
             android:text="Location"
+            android:layout_marginBottom="4dp"
             android:textSize="18sp" />
 
 
